# E4

./: .gitignore  .gitmodules  CMakeLists.txt  buildrun.sh  compile_commands.json  e4.org  makefile  makeres.sh
res/in/: main_fs.glsl  main_vs.glsl
src/: bootstrap.c  bootstrap.h  e4core.c  e4core.h  e4draw.c  e4draw.h  e4gui.c  e4gui.h  e4list.c  e4list.h  e4scene.c  e4scene.h  e4state.c  e4state.h  e4util.h  e4vec.h  gl.h  main.c
template/: CMakeLists.txt  buildrun.sh  makefile
template/src/: main.c
